opam-version: "1.2"
maintainer: "andy.ray@ujamjar.com"
authors: "andy.ray@ujamjar.com"
homepage: "https://github.com/ujamjar/hardcaml-framework"
dev-repo: "https://github.com/ujamjar/hardcaml-framework.git"
bug-reports: "https://github.com/ujamjar/hardcaml-framework/issues"
build: [ ["jbuilder" "build" "-p" name "-j" jobs] ]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build & >= "1.0+beta8"}
  "hardcaml-js" { >= "1.2.0" & < "2.0.0" }
  "ppx_deriving_hardcaml"
  "hardcaml-waveterm" { >= "0.2.0" }
  "astring"
  "omd"
  "lwt"
  "js_of_ocaml" { >= "3.0" }
]
available: [ ocaml-version >= "4.02.0" ]
name: "hardcaml-framework"
version: "0.4.0"
license: "ISC"

